--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
     </style>
 </head>
 <body>
-    <h1>Live College Sports Scores</h1>
+    <h1>Live Sports Scores</h1>
     <div id="score-container">
         {% for sport, games in all_scores.items() %}
             <h2>{{ sport }}</h2>
